# property-index

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  build_and_release.md  db_schema.md  scoring_methodology.md  user_guide.md
docs/decisions/: ADR-001-pyside6.md  ADR-002-sqlite-local.md  ADR-003-scoring-points.md  ADR-004-onedir-pyinstaller.md
src/house_index/: __init__.py  __main__.py  app.py  logging_setup.py  paths.py
src/house_index/db/: migrations.py  repository.py  schema.sql
src/house_index/domain/: enums.py  models.py
src/house_index/scoring/: defaults.py  engine.py  recompute.py  rules.py
src/house_index/services/: backup_service.py  photo_service.py  property_service.py
src/house_index/ui/: card_delegate.py  cards_view.py  compare_view.py  detail_view.py  edit_dialog.py  main_window.py  property_model.py  settings_panel.py  utils.py
src/house_index/ui/widgets/: bands_editor.py  dynamic_list.py  link_row.py  photo_gallery.py  rule_card.py  transit_row.py
tests/: test_auto_backup.py  test_backup_service.py  test_migrations.py  test_paths.py  test_photo_service.py  test_property_service.py  test_repository.py  test_scoring_bands.py  test_scoring_engine.py
